Poslishing: Gradient background and small fixes
- apply animated gradient background
- make 4k layout look better
- fix overflowing image after 480px breakpoint
- fix spacing on 4k layout

--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ footer {
 .btn {
   padding: 0.6rem;
   border: none;
-  width: 240px;
+  width: 15rem;
   background: none;
   margin: 0 auto;
   font-weight: 600;
@@ -493,6 +493,10 @@ footer p.p--black {
 /*************** media queries ********************/
 
 @media screen and (min-width: 480px) {
+  #section-1 {
+    background: linear-gradient(to right, pink, cyan);
+  }
+
   .testsection-wrapper,
   .section-wrapper,
   .header-wrapper,
@@ -511,7 +515,8 @@ footer p.p--black {
   }
 
   #section-1 .main-img {
-    height: 450px;
+    max-width: 100%;
+    min-height: 450px;
   }
 
   #section-1 .buttons button:nth-child(2) {
@@ -568,10 +573,6 @@ footer p.p--black {
 
   #section-4 .section-wrapper div:nth-child(2) {
     align-self: flex-start;
-  }
-
-  .testimonial-grid {
-    grid-template-columns: 1fr 1fr;
   }
 
   #section-6 .buttons button:nth-child(1) {
@@ -655,6 +656,10 @@ footer p.p--black {
   .header-wrapper {
     width: 75%;
     margin: 0 auto;
+  }
+
+  .testimonial-grid {
+    grid-template-columns: 1fr 1fr;
   }
 
   .section-wrapper {
@@ -815,20 +820,82 @@ footer p.p--black {
   }
 }
 
-@media screen and (min-width: 3000px) {
-  html {
-    font-size: 2rem;
-  }
-
+@media screen and (min-width: 2560px) {
   .main-img {
     scale: 1.5;
   }
 
+  h1 {
+    font-size: 6rem;
+  }
+  h2 {
+    font-size: 5rem;
+  }
+  h3 {
+    font-size: 3rem;
+  }
+
+  p,
+  li {
+    font-size: 2.25rem;
+  }
+
+  .btn {
+    padding: 1em;
+    font-size: 2rem;
+  }
+
+  #section-1 {
+    min-height: 80vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  #section-1 .section-wrapper {
+    height: 100%;
+  }
+
+  #section-1 .buttons button:nth-child(1) {
+    width: 100%;
+  }
+
+  #section-1 .buttons button:nth-child(2) {
+    width: 100%;
+  }
+
+  #section-6 .buttons button:nth-child(1) {
+    width: 100%;
+  }
+
+  #section-6 .buttons button:nth-child(2) {
+    width: 100%;
+  }
+
+  #section-4 .btn {
+    width: 20rem;
+  }
+
+  .buttons {
+    min-width: 75%;
+  }
+
+  .feature-info {
+    font-size: 2.5rem;
+  }
+
+  .feature-name {
+    font-size: 3.5rem;
+  }
+
+  .feature-num {
+    font-size: 6.5rem;
+  }
   .testsection-wrapper,
   .section-wrapper,
   .header-wrapper,
   #footer-wrapper {
-    min-width: 70%;
+    max-width: 70%;
     margin: 0 auto;
     padding-top: 10rem;
     padding-bottom: 10rem;
@@ -841,6 +908,47 @@ footer p.p--black {
 
   .testimonial-grid {
     grid-template-columns: repeat(4, 1fr);
+  }
+
+  p.p--bigger {
+    font-size: 2.35rem;
+  }
+
+  .author-position {
+    font-size: 2.05rem;
+  }
+
+  .testimonial-author {
+    font-size: 2.75rem;
+  }
+
+  .footer-link,
+  .footer-name {
+    color: rgb(84, 84, 84);
+    font-weight: 500;
+    font-size: 2.5rem;
+  }
+
+  .footer-name {
+    font-size: 2.45rem;
+  }
+  p.p--small {
+    font-size: 2rem;
+  }
+
+  footer p.p--black {
+    font-size: 2.75rem;
+  }
+
+  input[type="email"] {
+    height: 100%;
+    padding: 1em;
+    font-size: 2rem;
+    margin-right: -4rem;
+  }
+
+  #section-6 h2 {
+    font-size: 4rem;
   }
 }
 
@@ -895,13 +1003,33 @@ footer p.p--black {
   }
 }
 
-/* controlled scrolling */
+/* applying gradient background */
+#section-1 {
+  background: linear-gradient(-45deg, pink, transparent, cyan);
+  animation: bg-animation 15s infinite alternate-reverse;
+  background-size: 300%;
+}
 
-body {
+@keyframes bg-animation {
+  0% {
+    background-position: 50%;
+  }
+  50% {
+    background-position: 100%;
+  }
+  100% {
+    background-position: 50%;
+  }
+}
+
+/* apply scroll */
+
+/* .testimonial-grid {
   scroll-snap-type: y mandatory;
-  overflow-x: scroll;
+  overflow-y: auto;
+  height: 100vh;
 }
 
-section {
+.testimonial {
   scroll-snap-align: start;
-}
+} */
